--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
       <main class="mdl-layout__content">
         <div class="image">
-          <img>
+          <img src="./images/HTML-style-guide.jpeg">
         </div>
         <div class="page-content">
           Enter
