--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="./images/HTML-style-guide.jpeg" alt="study guide">
         </div>
         <div class="page-content">
-          Enter
+          <p>Enter length of a square</p>
         </div>
         <br>
         <!-- Numeric Textfield with Floating Label -->
